--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -34,29 +34,31 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
 
-    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
-    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2"
 
+    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
-def querydslDir = "$buildDir/generated/querydsl"
+def querydslDir = "src/main/generated"
 
 querydsl {
     jpa = true
     querydslSourcesDir = querydslDir
 }
 sourceSets {
-    main.java.srcDir querydslDir
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+        }
+    }
 }
 compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
 }
 configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
     querydsl.extendsFrom compileClasspath
 }
 
